# fastapi-weather

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
api/: __main__.py
app/: main.py
app/parser/: config.py  openweathermap.py
parser/: Untitled-1.json  config.py  openweathermap.py
parser/models/: model.py
tests/: conftest.py  test_openweather.py
