[tool.poetry]
name = "openweather-api"
version = "0.1.0"
description = ""
authors = ["Mischa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
requests = "^2.31.0"
python-dotenv = "^1.0.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.8"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
