[tool.poetry]
name = "openweather-api"
version = "0.1.0"
description = ""
authors = ["Mischa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
mypy = "^1.5.1"
httpx = "^0.25.0"
pytest = "^7.4.3"
respx = "^0.20.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
